fixing icons and links for languages

--- a/views/homeDE.hbs
+++ b/views/homeDE.hbs
@@ -43,10 +43,10 @@
     <!--Language Links-->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link"><span class="flag-icon flag-icon-us" href="/home"></span></a>
+            <a class="nav-link" href="/home"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link"><span class="flag-icon flag-icon-fr" href="/homeFR"></span></a>
+            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
@@ -71,7 +71,7 @@
 
             <!--Left Column Top-->
             <!--Web Development-->
-            <a href="/webPort">
+            <a href="/webPortDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="WebDevSS" src="../Images/clicktripUI.png">
                     <div class="card-title">
@@ -87,7 +87,7 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Experience-->
-            <a href="/experience">
+            <a href="/experienceDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="experiencePic" src="../Images/CNBacktoSchool1.jpg">
                     <div class="card-title">
@@ -104,7 +104,7 @@
         <!--Right Column-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <!--Education-->
-            <a href="/education">
+            <a href="/educationDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="gradPic" src="../Images/Graduation-UCSD-Me.jpg">
                     <div class="card-title">
@@ -120,7 +120,7 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Photography Panel-->
-            <a href="/photo">
+            <a href="/photoDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="meShooting" src="../Images/FranceMeIrelandRV.jpg">
                     <!-- <div class="panel panel-header">
@@ -135,7 +135,8 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Skills Panel-->
-            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/skills">
+            <a href="/skillsDE">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="skillsPic" src="../Images/skillsPic.jpg">
 
                     <div class="card-title">
@@ -149,7 +150,8 @@
         <!--Video Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <!--Video Panel-->
-            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+            <a href="/videoDE">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
