--- a/views/contactFR.hbs
+++ b/views/contactFR.hbs
@@ -42,10 +42,10 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link"><span class="flag-icon flag-icon-us" href="/home"></span></a>
+            <a class="nav-link" href="/home"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link"><span class="flag-icon flag-icon-de" href="/homeDE"></span></a>
+            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
     </ul>
         <!-- Links -->
@@ -54,11 +54,11 @@
                 <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutFR">À propos de moi
+                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutFR">
                 </a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-book" href="/contactFR">Se contact</a>
+                <a class="nav-link glyphicon glyphicon-book" href="/contactFR"></a>
             </li>
         </ul>
         <!-- links -->
