--- a/views/home.hbs
+++ b/views/home.hbs
@@ -43,10 +43,10 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-fr" href="/homeFR"></a>
+            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-de" href="/homeDE"></a>
+            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
     </ul>
     <!-- Links -->
@@ -135,7 +135,8 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Skills Panel-->
-            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/skills">
+            <a href="/skills">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="skillsPic" src="../Images/skillsPic.jpg">
 
                     <div class="card-title">
@@ -149,7 +150,8 @@
         <!--Video Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <!--Video Panel-->
-            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+            <a href="/video">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
