--- a/views/video.hbs
+++ b/views/video.hbs
@@ -40,7 +40,15 @@
             </a>
         </li>
     </ul>
-
+    <!-- Language Links -->
+    <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
+        </li>
+    </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
