changed some of the language links

--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -43,10 +43,10 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/webPortFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/webPortDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
     </ul>
     <!-- Links -->
