finished the rest of the foreign pages and links on those pages so everything points to the correct pages

--- a/views/contactFR.hbs
+++ b/views/contactFR.hbs
@@ -1,5 +1,5 @@
  <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
-        <a class="navbar-brand" href="/home">Eric Willard</a>
+        <a class="navbar-brand" href="/homeFR">Eric Willard</a>
 
         <!-- Social Media Contact Links-->
         <ul class="navbar-collapse justify-content-between mr-auto list-inline">
@@ -62,8 +62,6 @@
             </li>
         </ul>
         <!-- links -->
-
-        </div>
         
     </nav>
     <div class="container-fluid">
