--- a/views/homeDE.hbs
+++ b/views/homeDE.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
-    <a class="navbar-brand" href="/home">Eric Willard</a>
+    <a class="navbar-brand" href="/homeDE">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-between mr-auto list-inline">
@@ -52,7 +52,7 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/home"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
