--- a/views/homeFR.hbs
+++ b/views/homeFR.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
-    <a class="navbar-brand" href="/home">Eric Willard</a>
+    <a class="navbar-brand" href="/homeFR">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-between mr-auto list-inline">
