--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -42,28 +42,25 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
         <!-- Links -->
         <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
-            <li class="nav-item list-item-inline">
-                <a class="nav-link" href="/home">Home</a>
-            </li>
-            <li class="nav-item list-item-inline">
-                <a class="nav-link" href="/about">About
-                </a>
-            </li>
-            <li class="nav-item list-item-inline">
-                <a class="nav-link" href="/contact">Contact</a>
-            </li>
-        </ul>
-        <!-- links -->
-
-        </div>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link glyphicon glyphicon-home" href="/home"></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contact"></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link glyphicon glyphicon-book" href="/about"></a>
+        </li>
+    </ul>
+        <!-- End links -->
         
     </nav>
     <div class="container-fluid">
