--- a/views/education.hbs
+++ b/views/education.hbs
@@ -41,19 +41,28 @@
         </li>
     </ul>
 
+    <!-- Language Links -->
+    <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/educationDE"><span class="flag-icon flag-icon-de"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/educationFR"><span class="flag-icon flag-icon-fr"></span></a>
+        </li>
+    </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/home">Home
-            </a>
+            <a class="nav-link glyphicon glyphicon-home" href="/home"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contact">Contact</a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contact"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/about">About</a>
+            <a class="nav-link glyphicon glyphicon-book" href="/about"></a>
         </li>
     </ul>
+    <!-- End Nav & lang links-->
    
 </nav>
 
