--- a/views/photoFR.hbs
+++ b/views/photoFR.hbs
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="/homeFR">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
-    <ul class="navbar-collapse justify-content-between mr-auto list-inline">
+    <ul class="navbar-collapse justify-content-start mr-auto list-inline">
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.linkedin.com/in/willarderic/">
                 <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
