--- a/views/homeFR.hbs
+++ b/views/homeFR.hbs
@@ -163,5 +163,5 @@
     </div>
 </div>
 <footer class="footer aqua-gradient-rgba">
-    © Droits d'Auteur 2019 Eric Willard
+    © Eric Willard
 </footer>
