--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -185,10 +185,6 @@
         </div>
     </div>
 </div>
-
-
-
-
 <footer class="footer purple-gradient-rgba">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
