--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -139,16 +139,6 @@
         </div>
         <!--End Left Column Panel-->
 
-
-
-
-
-
-
-
-
-
-
 <footer class="footer peach-gradient-rgba">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
