--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ html, body {
 div.container-fluid {
 	align-items: center;
 	margin: 20px 0 20px 0;
+	padding-left: 0px;
 }
 #card-text {
 	text-shadow: 1px 1px black;
