--- a/views/educationFR.hbs
+++ b/views/educationFR.hbs
@@ -63,7 +63,7 @@
         </li>
     </ul>
     <!-- End Nav & lang links-->
-   
+
 </nav>
 
 <!--End Navbar-->
@@ -77,17 +77,17 @@
             <!--Kansas University-->
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
-                    <div class="card-title">
-                        Kansas University
-                    </div>
-                        <div class="card-body">
-                            <ul style="list-style-type:disc;">
-                                <li>Coding Boot Camp</li>
-                                <li>June 2017-May 2018</li>
-                                <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
-                                <ul>
-                        </div>    
-        </div>    
+                <div class="card-title">
+                    Kansas University
+                </div>
+                <div class="card-body">
+                    <ul style="list-style-type:disc;">
+                        <li>Coding Boot Camp</li>
+                        <li>June 2017-May 2018</li>
+                        <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
+                        <ul>
+                </div>
+            </div>
         </div>
         <!--End KU Panel-->
 
@@ -97,42 +97,43 @@
             <!--Start UCSD Panel-->
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="ucsdlogo" src="../Images/UCSD-logo.png">
-                    <div class="card-title">
-                        University of California San Diego
-                    </div>
-                        <div class="card-body">
-                            <ul style="list-style-type:disc;">
-                                <li>Bachelor of Arts</li>
-                                <li>September 2012-August 2014</li>
-                                <li>My studies at UCSD consisted heavily of languages, history, and politics.  I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
-                                </ul>
-                        </div>        
+                <div class="card-title">
+                    University of California San Diego
+                </div>
+                <div class="card-body">
+                    <ul style="list-style-type:disc;">
+                        <li>Bachelor of Arts</li>
+                        <li>September 2012-August 2014</li>
+                        <li>My studies at UCSD consisted heavily of languages, history, and politics. I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        </div>    
         <!--End UCSD Panel-->
 
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
-        <!--Right Column Panel-->
-        <!--Start Fullerton College Panel-->
-        <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
+            <!--Right Column Panel-->
+            <!--Start Fullerton College Panel-->
+            <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="fullcolllogo" src="../Images/fullcolllogo.jpg">
-                    <div class="card-title">
-                        Fullerton College
-                    </div>    
-                        <div class="card-body">
-                            <ul style="list-style-type:disc;">
-                                <li>Associate in Arts in Film</li>
-                                <li>January 2009-May 2012</li>
-                                <li>At Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution.  I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department.  In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>  
-                                </ul>
-                        </div>    
+                <div class="card-title">
+                    Fullerton College
+                </div>
+                <div class="card-body">
+                    <ul style="list-style-type:disc;">
+                        <li>Associate in Arts in Film</li>
+                        <li>January 2009-May 2012</li>
+                        <li>At Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution. I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department. In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>
+                    </ul>
+                </div>
+            </div>
+            <!--End Fullerton College Panel-->
         </div>
-        </div>
-        <!--End Fullerton College Panel-->
+    </div>
+</div>
+        
 
-
-
-<footer class="footer stylish-color">
-    © Copyright 2019 Eric Willard
-</footer>
+        <footer class="footer stylish-color">
+            © Eric Willard
+        </footer>
