--- a/views/experienceDE.hbs
+++ b/views/experienceDE.hbs
@@ -108,8 +108,6 @@
         <!--End KU Panel-->
     </div>
 </div>
-
-
 <footer class="footer aqua-gradient-rgba">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
