--- a/views/homeDE.hbs
+++ b/views/homeDE.hbs
@@ -163,5 +163,5 @@
     </div>
 </div>
 <footer class="footer aqua-gradient-rgba">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
