--- a/views/photoFR.hbs
+++ b/views/photoFR.hbs
@@ -345,9 +345,6 @@
     </div>
     <!--End 3rd Row-->
 </div>
-
-
-
 <footer class="footer blue-gradient-rgba">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
