--- a/views/videoDE.hbs
+++ b/views/videoDE.hbs
@@ -134,13 +134,8 @@
                     </div>
             </div></a>
         </div>
-    </div>
-
-    
+    </div> 
 </div>
-
-
-
 <footer class="footer elegant-color">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
