--- a/views/videoFR.hbs
+++ b/views/videoFR.hbs
@@ -135,12 +135,8 @@
             </div></a>
         </div>
     </div>
-
-    
 </div>
 
-
-
 <footer class="footer elegant-color">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
