--- a/views/educationDE.hbs
+++ b/views/educationDE.hbs
@@ -78,12 +78,12 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                 <div class="card-title">
-                    Kansas University
+                    Kansas Universität
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Coding Boot Camp</li>
-                        <li>June 2017-May 2018</li>
+                        <li>Juni 2017-Mai 2018</li>
                         <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
                         <ul>
                 </div>
@@ -98,8 +98,7 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="ucsdlogo" src="../Images/UCSD-logo.png">
                 <div class="card-title">
-                    University of California San Diego
-                </div>
+                    Universität von Kalifornien San Diego
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Bachelor of Arts</li>
@@ -118,13 +117,13 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="fullcolllogo" src="../Images/fullcolllogo.jpg">
                 <div class="card-title">
-                    Fullerton College
+                    Fullerton Universität
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Associate in Arts in Film</li>
-                        <li>January 2009-May 2012</li>
-                        <li>At Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution. I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department. In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>
+                        <li>Janjuar 2009-Mai 2012</li>
+                        <li>Bei Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution. I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department. In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>
                     </ul>
                 </div>
             </div>
@@ -134,5 +133,5 @@
 </div>
 
 <footer class="footer stylish-color">
-    © Copyright 2019 Eric Willard
+    © Eric Willard
 </footer>
