trying to fix panels

--- a/views/educationFR.hbs
+++ b/views/educationFR.hbs
@@ -78,7 +78,7 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                 <div class="card-title">
-                    Kansas Universite
+                    Kansas Université
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
@@ -103,7 +103,7 @@
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Baccalauréat ès Arts</li>
-                        <li>Septembre 2012-Aout 2014</li>
+                        <li>Septembre 2012-Août 2014</li>
                         <li>My studies at UCSD consisted heavily of languages, history, and politics. I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
                     </ul>
                 </div>
@@ -123,7 +123,7 @@
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Associé en Arts en Film</li>
-                        <li>Janjuar 2009-Mai 2012</li>
+                        <li>Janvier 2009-Mai 2012</li>
                         <li>Bei Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution. I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department. In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>
                     </ul>
                 </div>
