reverted to v120 to figure out formatting on educationDE

--- a/views/educationDE.hbs
+++ b/views/educationDE.hbs
@@ -123,7 +123,7 @@
                     <ul style="list-style-type:disc;">
                         <li>Associate in Arts in Film</li>
                         <li>Janjuar 2009-Mai 2012</li>
-                        <li>Bei Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution. I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department. In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>
+                        <li>Am Fullerton College war ich stolz darauf, während 2/3 meines Studiums an der Institution sowohl den Status eines Präsidenten als auch eines Dekans zu erhalten. Ich habe Film studiert, aber auch Deutsch, Französisch und Spanisch studiert und im Alleingang ein Video produziert, um die Abteilung für Auslandsstudien zu promoten. In den folgenden Jahren habe ich sowohl in Paris, Frankreich als auch in Berlin, Deutschland, studiert, was meine Sprachkenntnisse stärkte und mir ein besseres Verständnis für die fremde Kultur verschaffte.</li>
                     </ul>
                 </div>
             </div>
