--- a/views/educationDE.hbs
+++ b/views/educationDE.hbs
@@ -109,6 +109,7 @@
             </div>
         </div>
         <!--End UCSD Panel-->
+        </div>
 
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
@@ -128,6 +129,9 @@
                 </div>
             </div>
             <!--End Fullerton College Panel--> 
+        </div>
+    </div>
+</div>
 <footer class="footer stylish-color">
     © Eric Willard
 </footer>
