playing with responsiveness to ensure it all renders correctly based on the size of the window

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,13 +29,13 @@ div.container-fluid {
 .bottom-panels {
 	margin-bottom: 100px;
 }
-.row {
-	height: 350px !important;
-	margin: 20px -15px 20px -15px;
-}
-.top-panels {
+/* .row {
+	height: 350px !important; */
+	/* margin: 20px -15px 20px -15px; */
+/* } */
+/* .top-panels {
 	margin-bottom: 75px;
-}
+} */
 #education  {
 	font-size: 15px;
 	font-family: 'Acme', sans-serif;
