--- a/views/contactFR.hbs
+++ b/views/contactFR.hbs
@@ -54,11 +54,11 @@
                 <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutFR">
+                <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR">
                 </a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-book" href="/contactFR"></a>
+                <a class="nav-link glyphicon glyphicon-book" href="/aboutFR"></a>
             </li>
         </ul>
         <!-- links -->
