--- a/views/home.hbs
+++ b/views/home.hbs
@@ -41,23 +41,23 @@
         </li>
     </ul>
 
-    <!--Dropdown for site navigation-->
-    <div class="dropdown show">
-  <button class="btn btn-primary dropdown-toggle" href="#" type="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Site Navigation
-  </button>
+<!--Dropdown for site navigation-->
+<div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Site Navigation
+    </button>
 
-  <ul class="dropdown-menu" role="menu"aria-labelledby="dropdownMenuLink">
-      <li role="presentation">
-    <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPort">Web Development</a>
-    </li>
-    <li role="presentation">
-    <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experience">Experience</a>
-    </li>
-    <li role="presentation">
-    <a class="dropdown-item" role="menuitem" tabindex="-1" href="/education">Education</a>
-    </li>
-  </ul>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPort">Web Development</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experience">Experience</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/education">Education</a>
+        </li>
+    </ul>
 </div>
 <!--End Dropdown Button-->
 
