dropdown working just adding it to the nav on each page with all the correct links

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -57,6 +57,15 @@
         <li role="presentation">
             <a class="dropdown-item" role="menuitem" tabindex="-1" href="/education">Education</a>
         </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photo">Photography</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skills">Skills</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/video">Video</a>
+        </li>
     </ul>
 </div>
 <!--End Dropdown Button-->
