--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -41,6 +41,32 @@
         </li>
     </ul>
 
+<!--Dropdown for site navigation-->
+<div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Site Navigation
+    </button>
+
+    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPort">Web Development</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experience">Experience</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/education">Education</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photo">Photography</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/video">Video</a>
+        </li>
+    </ul>
+</div>
+<!--End Dropdown Button-->
+
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
