added site nav dropdown button in navbar for German pages

--- a/views/contactDE.hbs
+++ b/views/contactDE.hbs
@@ -39,6 +39,36 @@
             </a>
         </li>
     </ul>
+
+<!--Dropdown for site navigation-->
+<div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Seitennavigation
+    </button>
+
+    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortDE">Webentwicklung</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceDE">Erfahrung</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationDE">Ausbildung</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoDE">Fotographie</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsDE">Fähigkeiten</a>
+        </li>
+        <li role="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoDE">Video</a>
+        </li>
+    </ul>
+</div>
+<!--End Dropdown Button-->
+
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
