--- a/views/homeDE.hbs
+++ b/views/homeDE.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl sunny-morning-gradient">
     <a class="navbar-brand" href="/homeDE">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -43,7 +43,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-warning dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Seitennavigation
     </button>
 
@@ -192,6 +192,6 @@
         </div>
     </div>
 </div>
-<footer class="footer aqua-gradient-rgba">
+<footer class="footer sunny-morning-gradient">
     © Eric Willard
 </footer>
