--- a/views/photo.hbs
+++ b/views/photo.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl blue-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -371,6 +371,6 @@
     </div>
     <!--End 3rd Row-->
 </div>
-<footer class="footer blue-gradient-rgba">
+<footer class="footer aqua-gradient-rgba">
     © Eric Willard
 </footer>
