--- a/views/videoFR.hbs
+++ b/views/videoFR.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl elegant-color">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl blue-gradient-rgba">
     <a class="navbar-brand" href="/homeFR">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -43,7 +43,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-danger dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Nav sur le Site
     </button>
 
@@ -164,6 +164,6 @@
     </div>
 </div>
 
-<footer class="footer elegant-color">
+<footer class="footer blue-gradient-rgba">
     © Eric Willard
 </footer>
