--- a/views/contactFR.hbs
+++ b/views/contactFR.hbs
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
+ <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl blue-gradient-rgba">
         <a class="navbar-brand" href="/homeFR">Eric Willard</a>
 
         <!-- Social Media Contact Links-->
@@ -42,7 +42,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-danger dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Nav sur le Site
     </button>
 
@@ -138,6 +138,6 @@
             </div>
         </div>
     </div>
-    <footer class="footer aqua-gradient-rgba">
+    <footer class="footer blue-gradient-rgba">
         © Copyright 2019 Eric Willard
     </footer>
