--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl purple-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -211,6 +211,6 @@
         </div>
     </div>
 </div>
-<footer class="footer purple-gradient-rgba">
+<footer class="footer aqua-gradient-rgba">
     © Eric Willard
 </footer>
