--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl elegant-color">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -163,6 +163,6 @@
         </div>
     </div> 
 </div>
-<footer class="footer elegant-color">
+<footer class="footer aqua-gradient-rgba">
     © Eric Willard
 </footer>
