--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl peach-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -166,6 +166,6 @@
         </div>
         <!--End Left Column Panel-->
 
-<footer class="footer peach-gradient-rgba">
+<footer class="footer aqua-gradient-rgba">
     © Eric Willard
 </footer>
