changed button colors and sizes as well as shuffled the navbar appearances

--- a/views/educationFR.hbs
+++ b/views/educationFR.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl blue-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl winter-neva-gradient">
     <a class="navbar-brand" href="/homeFR">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -43,7 +43,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-danger dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-info btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Nav sur le Site
     </button>
 
@@ -158,6 +158,6 @@
         </div>
     </div>
 </div>
-        <footer class="footer blue-gradient-rgba">
+        <footer class="footer winter-neva-gradient">
             © Eric Willard
         </footer>
