--- a/views/contactDE.hbs
+++ b/views/contactDE.hbs
@@ -42,7 +42,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-warning dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-light btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Seitennavigation
     </button>
 
