--- a/views/experienceFR.hbs
+++ b/views/experienceFR.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl blue-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl winter-neva-gradient">
     <a class="navbar-brand" href="/homeFR">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -43,7 +43,7 @@
 
     <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-danger dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-info btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Nav sur le Site
     </button>
 
@@ -134,6 +134,6 @@
         <!--End KU Panel-->
     </div>
 </div>
-<footer class="footer blue-gradient-rgba">
+<footer class="footer winter-neva-gradient">
     © Eric Willard
 </footer>
