added Chinese pages and changes a few colors etc

--- a/views/aboutCN.hbs
+++ b/views/aboutCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
-    <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl winter-neva-gradient">
-        <a class="navbar-brand" href="/homeFR">Eric Willard</a>
+    <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
+        <a class="navbar-brand" href="/homeCN">艾瑞克 - 关于</a>
 
         <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -43,28 +43,28 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn winter-neva-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Nav sur le Site
+    <button class="btn peach-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        网站导航
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortFR">Projets</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortCN">Web开发</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceFR">Expériences Professionelles</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceCN">经历</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationFR">Éducation</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationCN">教育</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoFR">La Photographie</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoCN">摄影</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsFR">Compétences</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsCN">技能</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoFR">Vidéo</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoCN">视频</a>
         </li>
     </ul>
 </div>
@@ -78,17 +78,20 @@
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
+        </li>
     </ul>
         <!-- Links -->
         <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/home"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contact"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutFR"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/about"></a>
         </li>
     </ul>
 
@@ -256,7 +259,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer winter-neva-gradient">
+    <footer class="footer danger-color">
         © Copyright 2019 Eric Willard
     </footer>
     </div>
