--- a/views/educationCN.hbs
+++ b/views/educationCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl winter-neva-gradient">
-    <a class="navbar-brand" href="/homeFR">Eric Willard</a>
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
+    <a class="navbar-brand" href="/homeCN">艾瑞克</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -43,25 +43,25 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn winter-neva-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Nav sur le Site
+    <button class="btn peach-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        网站导航
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortFR">Projets</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortCN">Web开发</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceFR">Expériences Professionelles</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceCN">经历</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoFR">La Photographie</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoCN">摄影</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsFR">Compétences</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsCN">技能</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoFR">Vidéo</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoCN">视频</a>
         </li>
     </ul>
 </div>
@@ -73,19 +73,19 @@
             <a class="nav-link" href="/education"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/educationDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/educationFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutFR"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
         </li>
     </ul>
     <!-- End Nav & lang links-->
@@ -104,12 +104,12 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                 <div class="card-title">
-                    Kansas Université
+                    Kansas Universität
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Coding Boot Camp</li>
-                        <li>Juin 2017-Mai 2018</li>
+                        <li>Juni 2017-Mai 2018</li>
                         <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
                         <ul>
                 </div>
@@ -124,18 +124,18 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="ucsdlogo" src="../Images/UCSD-logo.png">
                 <div class="card-title">
-                    Université Californie de San Diego
-                </div>
+                    Universität von Kalifornien San Diego
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
-                        <li>Baccalauréat ès Arts</li>
-                        <li>Septembre 2012-Août 2014</li>
+                        <li>Bachelor of Arts</li>
+                        <li>September 2012-August 2014</li>
                         <li>My studies at UCSD consisted heavily of languages, history, and politics. I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
                     </ul>
                 </div>
             </div>
         </div>
         <!--End UCSD Panel-->
+        </div>
 
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
@@ -144,20 +144,20 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="fullcolllogo" src="../Images/fullcolllogo.jpg">
                 <div class="card-title">
-                    Fullerton Université
+                    Fullerton Universität
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
-                        <li>Associé en Arts en Film</li>
-                        <li>Janvier 2009-Mai 2012</li>
-                        <li>Bei Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution. I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department. In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>
+                        <li>Associate in Arts in Film</li>
+                        <li>Janjuar 2009-Mai 2012</li>
+                        <li>Am Fullerton College war ich stolz darauf, während 2/3 meines Studiums an der Institution sowohl den Status eines Präsidenten als auch eines Dekans zu erhalten. Ich habe Film studiert, aber auch Deutsch, Französisch und Spanisch studiert und im Alleingang ein Video produziert, um die Abteilung für Auslandsstudien zu promoten. In den folgenden Jahren habe ich sowohl in Paris, Frankreich als auch in Berlin, Deutschland, studiert, was meine Sprachkenntnisse stärkte und mir ein besseres Verständnis für die fremde Kultur verschaffte.</li>
                     </ul>
                 </div>
             </div>
-            <!--End Fullerton College Panel-->
+            <!--End Fullerton College Panel--> 
         </div>
     </div>
 </div>
-        <footer class="footer winter-neva-gradient">
-            © Eric Willard
-        </footer>
+<footer class="footer danger-color">
+    © Eric Willard
+</footer>
