--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -160,7 +160,7 @@
 
 
                 <div class="card-body">
-                <p id="card-text">Innovative Photos/创新照片</p>
+                <p id="card-text">Innovative Photos</p>
                 </div>
             </div></a>
         </div>
