--- a/views/contactCN.hbs
+++ b/views/contactCN.hbs
@@ -1,5 +1,5 @@
- <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl winter-neva-gradient">
-        <a class="navbar-brand" href="/homeFR">Eric Willard</a>
+ <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
+        <a class="navbar-brand" href="/homeCN">艾瑞克 - 联系</a>
 
         <!-- Social Media Contact Links-->
         <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -42,28 +42,28 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn winter-neva-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Nav sur le Site
+    <button class="btn peach-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        网站导航
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortFR">Projets</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortCN">Web开发</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceFR">Expériences Professionelles</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceCN">经历</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationFR">Éducation</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationCN">教育</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoFR">La Photographie</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoCN">摄影</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsFR">Compétences</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsCN">技能</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoFR">Vidéo</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoCN">视频</a>
         </li>
     </ul>
 </div>
@@ -75,20 +75,20 @@
             <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
         <!-- Links -->
         <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
+                <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR">
+                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutDE">
                 </a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-book" href="/aboutFR"></a>
+                <a class="nav-link glyphicon glyphicon-book" href="/contactDE"></a>
             </li>
         </ul>
         <!-- links -->
@@ -104,32 +104,32 @@
                     <!-- Form contact -->
                     <form action="MAILTO:ewill2020@gmail.com" method="post" enctype="text/plain">
                         <div class="form-group">
-                            <label for="form3">Your Name</label>
+                            <label for="form3">Name</label>
                             <input type="text" name="name" id="form3" class="form-control">
 
                         </div>
 
                         <div class="form-group">
-                            <label for="form2">Votre Email</label>
+                            <label for="form2">E-mail</label>
 
                             <input type="text" id="form2" name="mail" class="form-control">
 
                         </div>
 
                         <div class="form-group">
-                            <label for="form34">Subjet</label>
+                            <label for="form34">Betreff</label>
                             <input type="text" id="form32" class="form-control">
                         </div>
 
                         <div class="form-group">
-                            <label for="form8">Votre Message</label>
+                            <label for="form8">Ihre Nachricht</label>
                             <br>
                             <textarea type="text" id="form8" name="message" class="md-textarea" style="height: 100px"></textarea>
 
                         </div>
 
                         <div class="send">
-                            <button type="submit" class="btn btn-info">Envoyer</button>
+                            <button type="submit" class="btn btn-info">versenden</button>
                         </div>
 
                     </form>
@@ -138,6 +138,6 @@
             </div>
         </div>
     </div>
-    <footer class="footer winter-neva-gradient">
+    <footer class="footer danger-color">
         © Copyright 2019 Eric Willard
     </footer>
