--- a/views/homeCN.hbs
+++ b/views/homeCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl winter-neva-gradient">
-    <a class="navbar-brand" href="/homeFR">Eric Willard</a>
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl color-danger">
+    <a class="navbar-brand" href="/homeCN">艾瑞克 - 关于</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -43,28 +43,28 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn winter-neva-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Nav sur le Site
+    <button class="btn peach-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        网站导航
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortFR">Projets</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortCN">Web开发</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceFR">Expériences Professionelles</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceCN">经历</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationFR">Éducation</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationCN">教育</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoFR">La Photographie</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoCN">摄影</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsFR">Compétences</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsCN">技能</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoFR">Vidéo</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoCN">视频</a>
         </li>
     </ul>
 </div>
@@ -73,22 +73,25 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/home"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
-    <!-- Basic Nav Links -->
+    <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutFR"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
         </li>
     </ul>
 </nav>
@@ -101,11 +104,11 @@
 
             <!--Left Column Top-->
             <!--Web Development-->
-            <a href="/webPortFR">
+            <a href="/webPortDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="WebDevSS" src="../Images/clicktripUI.png">
                     <div class="card-title">
-                        <p id="card-text">Projets<i class="glyphicon glyphicon-globe"></i></p>
+                        <p id="card-text">Webentwicklung<i class="glyphicon glyphicon-globe"></i></p>
                     </div>
             </div></a>
 
@@ -117,11 +120,11 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Experience-->
-            <a href="/experienceFR">
+            <a href="/experienceDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="experiencePic" src="../Images/CNBacktoSchool1.jpg">
                     <div class="card-title">
-                        <p id="card-text">Expériences Professionelles<i class="glyphicon glyphicon-ok"></i></p>
+                        <p id="card-text">Erfahrung<i class="glyphicon glyphicon-ok"></i></p>
                     </div>
             </div></a>
             <!--End Experience-->
@@ -134,11 +137,11 @@
         <!--Right Column-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <!--Education-->
-            <a href="/educationFR">
+            <a href="/educationDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="gradPic" src="../Images/Graduation-UCSD-Me.jpg">
                     <div class="card-title">
-                        <p id="card-text">Éducation<i class="glyphicon glyphicon-education"></i></p>
+                        <p id="card-text">Ausbildung<i class="glyphicon glyphicon-education"></i></p>
                     </div>
             </div></a>
             <!--End Education-->
@@ -150,13 +153,13 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Photography Panel-->
-            <a href="/photoFR">
+            <a href="/photoDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="meShooting" src="../Images/FranceMeIrelandRV.jpg">
                     <!-- <div class="panel panel-header">
                     </div> -->
                     <div class="card-title">
-                        <p id="card-text">La Photographie<i class="glyphicon glyphicon-camera"></i></p>
+                        <p id="card-text">Fotographie<i class="glyphicon glyphicon-camera"></i></p>
                     </div>
             </div></a>
             <!--End Photography-->
@@ -165,12 +168,12 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Skills Panel-->
-            <a href="/skillsFR">
+            <a href="/skillsDE">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="skillsPic" src="../Images/skillsPic.jpg">
 
                     <div class="card-title">
-                        <p id="card-text">Compétences<i class="glyphicon glyphicon-star"></i></p>
+                        <p id="card-text">Fähigkeiten<i class="glyphicon glyphicon-star"></i></p>
                     </div>
             </div></a>
             <!--End Skills Panel-->
@@ -180,18 +183,18 @@
         <!--Video Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <!--Video Panel-->
-            <a href="/videoFR">
+            <a href="/videoDE">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Vidéo<i class="glyphicon glyphicon-facetime-video"></i></p>
+                        <p id="card-text">Video<i class="glyphicon glyphicon-facetime-video"></i></p>
                     </div>
             </div></a>
             <!--End Video Panel-->
         </div>
     </div>
 </div>
-<footer class="footer winter-neva-gradient">
-    © Eric Willard
+<footer class="footer danger-color">
+    © 艾瑞克
 </footer>
