--- a/views/skillsCN.hbs
+++ b/views/skillsCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl winter-neva-gradient">
-    <a class="navbar-brand" href="/homeFR">Eric Willard</a>
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl peach-gradient">
+    <a class="navbar-brand" href="/homeCN">艾瑞克</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -43,25 +43,25 @@
 
     <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn winter-neva-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Nav sur le Site
+    <button class="btn peach-gradient btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Seitennavigation
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortFR">Projets</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortDE">Webentwicklung</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceFR">Expériences Professionelles</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceDE">Erfahrung</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationFR">Éducation</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationDE">Ausbildung</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoFR">La Photographie</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoDE">Fotographie</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoFR">Vidéo</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoDE">Video</a>
         </li>
     </ul>
 </div>
@@ -73,19 +73,19 @@
             <a class="nav-link" href="/skills"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/skillsDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/skillsFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutFR"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
         </li>
     </ul> 
 </nav>
@@ -211,6 +211,6 @@
         </div>
     </div>
 </div>
-<footer class="footer winter-neva-gradient">
+<footer class="footer peach-gradient">
     © Eric Willard
 </footer>
